[package]
name = "dalle2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "local"
path = "src/lib.rs"

[dependencies]
dotenv= "0.15.0"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.14", features = ["macros", "rt-multi-thread"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
backoff = {version = "0.3.0", features = ["tokio"]}
governor = "0.3"
async-channel = "1.6.1"
webp = "0.2.2"